tracing/frontend/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world-frontend
  labels:
    app: hello-world-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-frontend
  template:
    metadata:
      labels:
        app: hello-world-frontend
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: hello-world-frontend
          image: >-
            quay-registry01-quay-quay01.apps.90ocp.example.com/skupper/hello-world-frontend
